# upmc

./: .gitattributes  .gitignore  AGENTS.md  CNAME  Cargo.toml  server.json  version.json
.github/workflows/: build-updater.yml  publish.yml
dev/: version.json
discord-proxy-dll/: Cargo.toml
discord-proxy-dll/src/: lib.rs
discord-voice-proxy/: Cargo.toml
discord-voice-proxy/src/: discord.rs  installer.rs  lib.rs
docs/: security-hardening.md
force-proxy-dll/: Cargo.toml
force-proxy-dll/src/: hooks.rs  lib.rs  socks5.rs
launcher/PCL/: Setup.ini
packwiz/: index.toml  pack.toml
packwiz/mods/: carpet-tis-addition.pw.toml  gca.pw.toml  imblocker-original.pw.toml  item-scroller.pw.toml  mclogs.pw.toml  quickshulker.pw.toml  syncmatica.pw.toml  worldedit.pw.toml
scripts/: build-release.ps1  publish.ps1  sign-updater.ps1  upgrade-version.ps1
updater-rs/: Cargo.toml  build.rs
updater-rs/src/: bootstrap.rs  config.rs  fabric.rs  gui.rs  logging.rs  main.rs  packwiz.rs  retry.rs  selfupdate.rs  update.rs  version.rs
upmc/: Cargo.toml  build.rs
upmc/assets/: app.manifest
upmc/src/: bootstrap.rs  config.rs  discord_proxy.rs  fabric.rs  gui.rs  main.rs  packwiz.rs  retry.rs  selfupdate.rs  update.rs  version.rs  xray.rs
