[package]
name = "upmc-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI: 轻量级 Win32 原生窗口框架
native-windows-gui = "1.0"
native-windows-derive = "1.0"

# HTTP 请求: 纯 Rust 实现，无需 OpenSSL
ureq = "2"

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理: 简化 Result 链
anyhow = "1"

# SHA256 哈希计算
sha2 = "0.10"
hex = "0.4"

# ZIP 解压: 用于解压下载的 JRE
zip = "2"

# Windows 专用: 隐藏控制台窗口、设置 exe 属性
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[build-dependencies]
# 嵌入 exe 图标和版本信息
winresource = "0.1"

[profile.release]
# 优化编译产物大小
opt-level = "s"
lto = true
strip = true
codegen-units = 1
